--- a/pom.xml
+++ b/pom.xml
@@ -18,4 +18,16 @@
   <build>
     <finalName>java-hello-world</finalName>
   </build>
+  
+   <dependency>
+            <groupId>org.apache.tomcat.maven</groupId>
+            <artifactId>tomcat7-maven-plugin</artifactId>
+            <version>2.2</version>
+            <configuration>
+                <url>http://localhost:8090/manager</url>
+                <server>localhost</server>
+                <path>/E:\Git\pro\pro\src\main\webapp\WEB-INF</path>
+            </configuration>
+   </dependency>
 </project>
+
